# MerakitUI

./: .gitignore  README.md  pyproject.toml  requirements.txt
.kilocode/: mcp.json
docs/: ids-monitoring-design.md
src/meraki_tui/: __init__.py  __main__.py  api_client.py  config.py  main.py  models.py  utils.py
src/meraki_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meraki_tui/screens/: __init__.py  alerts.py  analytics.py  clients.py  config_screen.py  dashboard.py  security.py  settings.py
src/meraki_tui/widgets/: __init__.py  org_switcher.py  sparkline.py  status_bar.py
